# tinygp

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .readthhedocs.yaml  .zenodo.json  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  noxfile.py  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/workflows/: docs.yml  news.yml  tests.yml
docs/: .gitignore  Makefile  _config.yml  _toc.yml  api.rst  benchmarks.ipynb  bibliography.md  conf.py  contributing.md  guide.md  index.md  install.md  intro.md  motivation.md  news.rst  references.bib  requirements.txt  troubleshooting.md  tutorials.md
docs/_templates/autosummary/: class.rst
docs/api/: index.rst  kernels.quasisep.rst  kernels.rst  means.rst  noise.rst  solvers.quasisep.core.rst  solvers.quasisep.rst  solvers.rst  tinygp.kernels.quasisep.rst  tinygp.kernels.rst  tinygp.means.rst  tinygp.solvers.quasisep.core.rst  tinygp.solvers.quasisep.rst  tinygp.solvers.rst  tinygp.transforms.rst  transforms.rst
docs/tutorials/: .gitignore  benchmarks.ipynb  classification.ipynb  custom-kernel.ipynb  derivative.ipynb  flax-deep.ipynb  flax.ipynb  geometry.ipynb  george.ipynb  gp-classification.ipynb  gp_classification_mcmc.ipynb  gp_classification_svi.ipynb  gp_classification_test.ipynb  intro.ipynb  ipython_kernel_config.py  jupytext.toml  kernels.ipynb  likelihoods.ipynb  means.ipynb  mixture.ipynb  modeling.ipynb  multivariate.ipynb  numpyro-demo.ipynb  numpyro-demo.md  numpyro.ipynb  poisson.ipynb  pyro_notebook_test.ipynb  quasisep-custom.ipynb  quasisep-diff.ipynb  quasisep.ipynb  quickstart.ipynb  quickstart.md  transforms.ipynb
news/: 114.bugfix  119.bugfix  120.feature  121.bugfix  123.feature  124.bugfix  143.doc  148.feature  151.feature  153.doc  154.doc  159.bugfix  176.doc  184.misc  188.bugfix  200.feature  32.feature  32.removal  47.feature  49.doc  52.doc  54.doc  55.doc  57.bugfix  58.doc  58.feature  59.feature  60.feature  67.feature  70.doc  81.bugfix  88.bugfix  90.feature  98.doc
src/tinygp/: __init__.py  functional.py  gp.py  helpers.py  kernels.py  means.py  metrics.py  noise.py  numpyro_support.py  solver.py  test_utils.py  transforms.py  types.py
src/tinygp/kernels/: __init__.py  base.py  distance.py  quasisep.py  stationary.py
src/tinygp/semisep/: kernels.py  linalg.py
src/tinygp/solvers/: __init__.py  direct.py  kalman.py  solver.py
src/tinygp/solvers/quasisep/: __init__.py  block.py  core.py  general.py  kernels.py  ops.py  solver.py
tests/: conftest.py  test_george_compat.py  test_gp.py  test_kernels.py  test_noise.py  test_transforms.py  tesy_metrics.py
tests/semisep/: test_kernels.py
tests/test_kernels/: test_distance.py  test_kernels.py  test_quasisep.py
tests/test_solvers/: test_kalman.py
tests/test_solvers/test_quasisep/: test_block.py  test_core.py  test_general.py  test_kernels.py  test_quaasisep_kernels.py  test_quasisep_kernels.py  test_solver.py
