[build-system]
requires = ["setuptools>=40.6.0", "wheel", "setuptools_scm[toml]"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/tinygp/tinygp_version.py"

[tool.black]
line-length = 79

[tool.isort]
skip_glob = []
line_length = 79
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true

[tool.coverage.run]
parallel = true
branch = true
source = ["tinygp"]
omit = ["docs/*", "tests/*", "src/tinygp/tinygp_version.py"]

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.report]
show_missing = true
