[build-system]
requires = ["setuptools>=40.6.0,<60.9.0", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/tinygp/tinygp_version.py"

[tool.black]
target-version = ["py39"]
line-length = 88

[tool.ruff]
target-version = "py39"
line-length = 88
select = ["F", "I", "E", "W", "YTT", "B", "Q", "PLE", "PLR", "PLW", "UP"]
ignore = [
    "E741",    # Allow ambiguous variable names
    "PLR0911", # Allow many return statements
    "PLR0913", # Allow many arguments to functions
    "PLR0915", # Allow many statements
    "PLR2004", # Allow magic numbers in comparisons
]
exclude = []

[tool.ruff.isort]
known-first-party = ["tinygp"]
combine-as-imports = true

[tool.towncrier]
name = "tinygp"
package = "tinygp"
package_dir = "src"
filename = "docs/news.rst"
directory = "news/"
issue_format = "`#{issue} <https://github.com/dfm/tinygp/issues/{issue}>`_"
underlines = "-~~"
